<resources>
    <string name="app_name">Auto Review</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings_orig">Logout</string>
    <string name="userLoginName">Username</string>
    <string name="facebook_app_id">418412708582802</string>
    <string name="facebook_login_protocol_scheme">fb418412708582802</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings_window">settingsWindow</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_check">Re-enter Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Log me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Enter your registered Email Id and we will send you password reset instructions to your Email account.</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_maps">Map</string>

    <string name="user_title">User Administration</string>
    <string name="home_title">Application Administration</string>
    <string name="btn_review_administration">Review Administration</string>
    <string name="btn_user_administration">User Administration</string>
    <string name="btn_weather">Weather Report</string>
    <string name="btn_map">Current Location</string>
    <string name="btn_choice">Choose:</string>
    <string name="display_email">User Email:</string>
    <string name="display_time">Time:</string>
    <string name="home_user_time">Current Time</string>
    <string name="home_user_email">Current User</string>

    <string name="review_crud_title">Administration Review</string>
    <string name="review_crud_sub_title">Create, Read, Update and Delete</string>
    <string name="review_crud_title_field">Review Title</string>
    <string name="review_crud_review_field">Review Comment</string>

    <string name="user_crud_title">Administration User</string>
    <string name="crud_name">Name</string>
    <string name="crud_email">E-Mail</string>
    <string name="crud_phone">Phone</string>
    <string name="crud_password">Password</string>

    <string name="btn_continue">Continue</string>

    <string name="app_version_splash">Version 2.0 Administration</string>
    <string name="app_title">Auto Review</string>
    <string name="app_loading">Loading ...</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_navigation">HomeNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Auto Review</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_nav">TestNav</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="title_activity_testnav">testnav</string>
    <string name="title_activity_review_home">ReviewHome</string>
    <string name="title_activity_share_facebook">ShareFacebook</string>
    <string name="title_activity_about">About</string>

</resources>
