<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ie.williamwall.autoreview.navigationdrawer.AccountNavigation"
    tools:showIn="@layout/app_bar_home">

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"

        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:textColor="@color/white"

        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp"
        tools:ignore="InvalidImeActionId" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/white"

        android:hint="@string/new_pass"
        android:imeActionId="@+id/login"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp"
        tools:ignore="InvalidImeActionId" />

    <Button
        android:id="@+id/changePass"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/btn_change"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="211dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/remove"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continueMain"
        android:layout_alignLeft="@+id/changePass"
        android:layout_alignStart="@+id/changePass"
        android:background="@color/colorPrimary"
        android:text="@string/btn_remove"

        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="259dp" />

    <Button
        android:id="@+id/change_password_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:layout_above="@+id/remove_user_button"
        android:layout_alignStart="@+id/remove_user_button"
        android:layout_alignLeft="@+id/remove_user_button" />

    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out"
        android:layout_alignLeft="@+id/sign_out" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fireText"
        android:gravity="center"
        android:textColor="@color/white"

        android:hint="@string/email_id"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/continueMain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/change_password_button"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_continue" />

    <TextView
        android:id="@+id/fireText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"

        android:text="Login Account Administration"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageViewFirebase"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_below="@+id/useremail"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/usersettings" />

</RelativeLayout>
